Image is not showing reversed failed fixes

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -19,9 +19,7 @@ body {
     width: 1.5rem;
 }
 
-.Webicon{
-    size: 1rem;
-}
+
 
 .logo-font {
     text-transform: uppercase;
